# rpi3-rust-workspace

./: Cargo.toml  README.md  link.ld
.cargo/: config
bcm2837/: Cargo.toml
bcm2837-hal/: Cargo.toml
bcm2837-hal/src/: clocks.rs  delay.rs  gpio.rs  i2c.rs  lib.rs  pmem.rs  prelude.rs  rng.rs  serial.rs  spi.rs  time.rs  timer.rs
bcm2837-hal/src/dma/: control_block.rs  mod.rs
bcm2837-hal/src/mailbox/: mod.rs  tag_id.rs
bcm2837-hal/src/mailbox/msg/: mod.rs
bcm2837/src/: bsc0.rs  bsc1.rs  bsc2.rs  dma.rs  gpio.rs  lib.rs  mbox.rs  rng.rs  spi0.rs  sys_timer.rs  uart0.rs  uart1.rs
clock-display/: Cargo.toml
clock-display/src/: clock.rs  main.rs
display/: Cargo.toml
display-mbox-props/: Cargo.toml  build-image
display-mbox-props/src/: main.rs  serial.rs
display/src/: lib.rs
eg-test-project/: Cargo.toml  README.md  build-image
eg-test-project/src/: display.rs  main.rs
examples/embedded-graphics/: Cargo.toml
examples/embedded-graphics/src/: main.rs
examples/i2c0/: Cargo.toml
examples/i2c0/src/: main.rs
examples/i2c1/: Cargo.toml
examples/i2c1/src/: main.rs
examples/keypad/: Cargo.toml
examples/keypad/src/: main.rs
examples/mbox/: Cargo.toml
examples/mbox/src/: main.rs
examples/uart0/: Cargo.toml
examples/uart0/src/: main.rs
examples/uart1/: Cargo.toml
examples/uart1/src/: main.rs
fb-test-project/: Cargo.toml  build-image
fb-test-project/src/: main.rs  serial.rs
graphics-test-project/: Cargo.toml  build-image
graphics-test-project/src/: main.rs
gui/: Cargo.toml
gui/src/: bar_graph.rs  circle_digit.rs  lib.rs
mailbox/: Cargo.toml
mailbox/src/: lib.rs
mailbox/src/msg/: blank_screen.rs  mod.rs  (+4 more)
old-examples/clock-display/: build-image  simulate
old-examples/display/: Cargo.toml
old-examples/eg-test-project/: Cargo.toml  README.md
old-examples/graphics-test-project/: Cargo.toml
old-examples/mailbox/: Cargo.toml
raspi3_boot/: Cargo.toml
raspi3_boot/src/: lib.rs  panic_uart1.rs
(+16 files in other folders)
