[package]
name = "bcm2837-hal"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
bcm2837 = { path = "../bcm2837" }
cortex-a = "2.7"
nb = "0.1"
bitfield = "0.13"

[dependencies.void]
default-features = false
version = "1.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
