[package]
name = "display-mbox-props"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2015"

[dependencies]
raspi3_boot = { path = "../raspi3_boot" }
cortex-a = "2.2"
bcm2837 = { path = "../bcm2837" }
mailbox = { path = "../mailbox" }
display = { path = "../display" }
embedded-graphics = "0.4"
rgb = "0.8"
